.metadata/.plugins/org.eclipse.cdt.ui/My_HAL.build.log
15:51:37 **** Incremental Build of configuration Debug for project My_HAL ****
make all 
Building file: ../Src/sequencer.c
Invoking: MCU GCC Compiler
C:\Synthesizer\My_HAL\Debug
arm-none-eabi-gcc -mcpu=cortex-m3 -mthumb -mfloat-abi=soft '-D__weak=__attribute__((weak))' '-D__packed=__attribute__((__packed__))' -DUSE_HAL_DRIVER -DSTM32F103xB -I"C:/Synthesizer/My_HAL/Inc" -I"C:/Synthesizer/My_HAL/Drivers/STM32F1xx_HAL_Driver/Inc" -I"C:/Synthesizer/My_HAL/Drivers/STM32F1xx_HAL_Driver/Inc/Legacy" -I"C:/Synthesizer/My_HAL/Drivers/CMSIS/Device/ST/STM32F1xx/Include" -I"C:/Synthesizer/My_HAL/Drivers/CMSIS/Include" -I../MT_WH1602  -O0 -g3 -Wall -fmessage-length=0 -ffunction-sections -c -fmessage-length=0 -MMD -MP -MF"Src/sequencer.d" -MT"Src/sequencer.o" -o "Src/sequencer.o" "../Src/sequencer.c"
../Src/sequencer.c: In function 'sequencer_func':
../Src/sequencer.c:48:1: error: expected declaration or statement at end of input
 }
 ^
At top level:
../Src/sequencer.c:36:6: warning: 'light' defined but not used [-Wunused-function]
 void light(void) {
      ^~~~~
make: *** [Src/sequencer.o] Error 1
Src/subdir.mk:75: recipe for target 'Src/sequencer.o' failed

15:51:37 Build Finished (took 320ms)

